# makakoo-os

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CROSS-PLATFORM-TODOS.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.harvey/: .gitignore
ci/: block_runner.py  docs_manifest.toml  run_on_clean.sh  test_harness.sh  verify-docs.sh
distribution/: README.md  install.sh
makakoo/: Cargo.toml
makakoo-client/: Cargo.toml
makakoo-client-py/: README.md  pyproject.toml
makakoo-client-py/src/makakoo_client/: __init__.py
makakoo-client-py/tests/: test_protocol.py
makakoo-client/src/: lib.rs
makakoo-client/tests/: e2e_brain_llm.rs  e2e_socket.rs  py_e2e_socket.rs
makakoo-core/: Cargo.toml
makakoo-core/src/: config.rs  db.rs  embeddings.rs  error.rs  event_bus.rs  kernel_config.rs  lib.rs  llm.rs  memory.rs  platform.rs
makakoo-core/src/adapter/: call.rs  install.rs  manifest.rs  mod.rs  output.rs  peer.rs  registry.rs  result.rs  sandbox.rs  sign.rs  transport.rs  trust.rs
makakoo-core/src/agents/: audit.rs  destroy.rs  fault_inject.rs  identity.rs  launchd.rs  lifecycle.rs  llm_override.rs  mod.rs  rate_limit.rs  registry.rs  rlimits.rs  scaffold.rs  scope.rs  slot.rs  status.rs  supervisor.rs  supervisor_runtime.rs  systemd.rs
makakoo-core/src/agents/migrate/: harveychat.rs  mod.rs
makakoo-core/src/capability/: audit.rs  audit_escape.rs  grants.rs  mod.rs  purge_idempotency.rs  rate_limit.rs  socket.rs  user_grants.rs  verb.rs
makakoo-core/src/capability/service/: brain.rs  composite.rs  llm.rs  mod.rs  secrets.rs  state.rs
makakoo-core/src/channel_ops/: approval.rs  directory.rs  discord.rs  messaging.rs  mod.rs  slack.rs  telegram.rs  threading.rs
makakoo-core/src/chat/: mod.rs  router.rs  store.rs  telegram.rs  tts.rs
makakoo-core/src/distro/: file.rs  mod.rs  resolver.rs
makakoo-core/src/gimmicks/: compositor.rs  mod.rs
makakoo-core/src/gym/: capture.rs  mod.rs
makakoo-core/src/ipc/: mod.rs  unix_socket.rs
makakoo-core/src/nursery/: buddy.rs  mod.rs  patrol.rs  registry.rs
makakoo-core/src/outbound/: email.rs  linkedin.rs  mod.rs  telegram.rs
makakoo-core/src/plugin/: install.rs  lock.rs  manifest.rs  mod.rs  python_venv.rs  registry.rs  resolver.rs  staging.rs
makakoo-core/src/run/: composer.rs  mascots.rs  mod.rs  resolver.rs  strategies.rs  variables.rs
makakoo-core/src/sancho/: engine.rs  gates.rs  handlers.rs  mod.rs  registry.rs
makakoo-core/src/session/: export.rs  mod.rs  tree.rs
makakoo-core/src/source_fetch/: mod.rs
makakoo-core/src/superbrain/: diagnostics.rs  graph.rs  ingest.rs  memory_stack.rs  mod.rs  promoter.rs  recall.rs  scorer.rs  store.rs
makakoo-core/src/swarm/: artifacts.rs  coordinator.rs  dispatch_queue.rs  gateway.rs  mod.rs  olibia.rs  state.rs  team.rs
makakoo-core/src/telemetry/: aggregate.rs  costs.rs  mod.rs  tracing_setup.rs
makakoo-core/src/transport/: config.rs  discord.rs  email.rs  frame.rs  gateway.rs  mod.rs  outbound.rs  pairing.rs  router.rs  secrets.rs  slack.rs  status.rs  telegram.rs  voice_twilio.rs  web.rs  whatsapp.rs
makakoo-core/src/upgrade/: detect.rs  dispatch.rs  mod.rs  verify.rs
makakoo-core/src/wiki/: compile.rs  lint.rs  mod.rs
makakoo-core/tests/: adapter_call_matrix.rs  adapter_reference_manifests.rs  adapter_swarm_dispatch.rs  python_to_rust_queue.rs  swarm_crash_recovery.rs  swarm_smoke.rs
makakoo-docs-mcp/: Cargo.toml  build.rs
makakoo-docs-mcp/src/: lib.rs  main.rs  server.rs
makakoo-docs-mcp/src/index/: mod.rs  runtime.rs
makakoo-docs-mcp/src/tools/: list.rs  mod.rs  read.rs  search.rs  topic.rs
makakoo-mcp/: Cargo.toml
makakoo-mcp/src/: dispatch.rs  framing.rs  http_server.rs  jsonrpc.rs  main.rs  server.rs  slack_events.rs  twilio_voice_webhook.rs  web_chat_ws.rs  webhook_router.rs  whatsapp_webhook.rs
makakoo-mcp/src/handlers/: mod.rs  patterns.rs
makakoo-mcp/src/handlers/tier_a/: agents.rs  brain.rs  chat.rs  costs.rs  mod.rs  nursery.rs  sancho.rs  skill.rs  wiki.rs
makakoo-mcp/src/handlers/tier_b/: agents.rs  browse.rs  channel_ops.rs  infect.rs  journal.rs  knowledge.rs  mod.rs  multimodal.rs  nursery.rs  outbound.rs  perms.rs  pi.rs  sancho.rs  wiki.rs
makakoo-mcp/src/handlers/tier_c/: comm.rs  mod.rs  olibia.rs  swarm.rs
makakoo-platform/: Cargo.toml
makakoo-platform/src/: error.rs  lib.rs  linux.rs  macos.rs  paths.rs  redox.rs  unsupported.rs  windows.rs
makakoo-platform/tests/: daemon_roundtrip.rs
makakoo/assets/hooks/: harvey-gym-error.js
makakoo/src/: cli.rs  context.rs  detect.rs  main.rs  output.rs  secrets.rs  skill_runner.rs  test_support.rs
makakoo/src/commands/: adapter.rs  adapter_gen.rs  agent.rs  agent_audit.rs  agent_destroy.rs  agent_lifecycle.rs  agent_slot.rs  agent_test_faults.rs  bucket.rs  buddy.rs  default_banner.rs  distro.rs  docs.rs  docs_mcp.rs  dream.rs  flag.rs  install.rs  lifecycle.rs  mcp.rs  memory.rs  migrate.rs  mod.rs  nursery.rs  octopus.rs  perms.rs  plugin.rs  promotions.rs  query.rs  run.rs  s3.rs  s3_endpoint.rs  sancho.rs  search.rs  session.rs  setup.rs  skill.rs  sync.rs  upgrade.rs  version.rs
makakoo/src/commands/adapter_gen_templates/: mcp-stdio.toml  openai-compat.toml  peer-makakoo.toml  subprocess.toml
makakoo/src/commands/setup/: brain.rs  cli_agent.rs  harness.rs  infect_section.rs  mod.rs  model_provider.rs  persona.rs  state.rs  terminal.rs  test_support.rs
makakoo/src/daemon/: install.rs  linux.rs  macos.rs  mod.rs  status.rs  uninstall.rs  watchdog.rs  windows.rs
makakoo/src/infect/: bootstrap-base.md  ext.rs  hooks.rs  local.rs  mod.rs  pointer.rs  renderer.rs  slots.rs  writer.rs
makakoo/src/infect/mcp/: deep.rs  drift.rs  mod.rs  target.rs
makakoo/src/infect/mcp/adapters/: codex.rs  json.rs  mod.rs  vibe.rs
makakoo/tests/: adapter_cli.rs  adapter_live.rs  agent_browser_harness.rs  browse_e2e.rs  contract_no_garage_crates.rs  contract_no_harveyos_refs.rs  contract_plugin_entrypoint_paths.rs  garage_store_e2e.rs  install_sh.rs  mcp_http_peer.rs  perms_cli.rs  run_pattern.rs  service_lifecycle.rs  session_cli.rs  setup_wizard.rs  skill_manifests.rs
(+1211 files in other folders)
