[workspace]
resolver = "2"
members = ["makakoo-core", "makakoo-client", "makakoo-mcp", "makakoo-platform", "makakoo"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Makakoo OS contributors"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled-full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
fs2 = "0.4"
dirs = "5"
crossterm = "0.28"
comfy-table = "7.1"
blake3 = "1.5"
sha2 = "0.10"
regex = "1.11"
serde_yml = "0.0.12"
crossbeam-channel = "0.5"
keyring = "2.3"
auto-launch = "0.5"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
async-trait = "0.1"
rand = "0.8"
teloxide = { version = "0.17", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
toml = "0.8"
toml_edit = "0.22"
semver = { version = "1", features = ["serde"] }
libc = "0.2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Pipes"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[workspace.metadata.dist]
# cargo-dist packaging config. CI is DEFERRED — ci = [] means cargo-dist will
# NOT emit GitHub Actions workflows. When infra lands, flip ci = ["github"] and
# re-run `cargo dist init` to generate the release pipeline.
cargo-dist-version = "0.25.1"
ci = []
installers = ["shell", "homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
pr-run-mode = "skip"
tap = "makakoo/homebrew-makakoo"
publish-jobs = []
install-path = "$HOME/.local/bin"
install-updater = false
