[package]
name = "makakoo-client"
description = "Client library for plugins to call the Makakoo kernel capability socket"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
makakoo-core = { path = "../makakoo-core" }
