[package]
name = "makakoo-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
fs2.workspace = true
dirs.workspace = true
blake3.workspace = true
sha2.workspace = true
regex.workspace = true
serde_yml.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
once_cell.workspace = true
async-trait.workspace = true
rand.workspace = true
teloxide.workspace = true
base64 = "0.22"
petgraph = "0.6"
toml.workspace = true
semver.workspace = true
ed25519-dalek.workspace = true
tar.workspace = true
flate2.workspace = true
tempfile.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
wiremock = "0.6"
