[package]
name = "makakoo-docs-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "makakoo-docs-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.5", features = ["server", "macros", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
schemars = "0.8"

[build-dependencies]
rusqlite = { workspace = true }
walkdir = "2.5"
anyhow = "1"
