[package]
name = "makakoo-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "makakoo-mcp"
path = "src/main.rs"

[dependencies]
makakoo-core = { path = "../makakoo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
wiremock = "0.6"
