[package]
name = "makakoo-mcp"
version.workspace = true
edition.workspace = true

[[bin]]
name = "makakoo-mcp"
path = "src/main.rs"

[dependencies]
makakoo-core = { path = "../makakoo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
base64 = "0.22"
# Phase B v0.6 — HTTP serve mode. Axum's http1+json with default-features
# off keeps the surface minimal; TLS is the user's reverse-proxy job.
axum = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
hex = "0.4"
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
wiremock = "0.6"
tower = "0.5"
reqwest = { workspace = true }
