[package]
name = "makakoo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "makakoo"
path = "src/main.rs"

[dependencies]
makakoo-core = { path = "../makakoo-core" }
tokio.workspace = true
clap.workspace = true
crossterm.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
chrono.workspace = true
async-trait.workspace = true
dirs.workspace = true
regex.workspace = true
keyring.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
auto-launch.workspace = true

[dev-dependencies]
tempfile = "3"
