[package]
name = "makakoo"
version.workspace = true
edition.workspace = true

[[bin]]
name = "makakoo"
path = "src/main.rs"

[dependencies]
makakoo-core = { path = "../makakoo-core" }
makakoo-platform = { path = "../makakoo-platform" }
tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
comfy-table.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
chrono.workspace = true
async-trait.workspace = true
dirs.workspace = true
regex.workspace = true
keyring.workspace = true
toml.workspace = true
toml_edit.workspace = true
reqwest.workspace = true
flate2.workspace = true
tar.workspace = true
# v0.6 Phase B — `adapter trust` + `adapter self-pubkey` subcommands
# encode Ed25519 pubkeys for display.
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
rusqlite.workspace = true
# v0.6 Phase B — peer-to-peer HTTP integration test.
ed25519-dalek.workspace = true
rand.workspace = true
base64 = "0.22"
